# pinhead

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  justfile
docs/: ARCHITECTURE.md
examples/: README.md  doc_demo.lua  env_demo.lua  fs_mirror.lua  fs_ops.lua  handler.lua  http_demo.lua  serialize_demo.lua  simple_http_test.lua  sql_demo.lua  test_basic.lua  users.lua
examples/all_ops/: main.lua
examples/basic/: main.lua
examples/bundle_defaults/: main.lua
examples/comprehensive/: main.lua
examples/conversion/: main.lua
examples/doc/: main.lua
examples/env/: main.lua
examples/fs_mirror/: main.lua
examples/fs_ops/: main.lua
examples/handler/: main.lua
examples/http/: main.lua
examples/modular/: config.lua  main.lua  routes.lua  utils.lua
examples/serialization/: main.lua
examples/simple-http/: main.lua
examples/simpler/: main.lua
examples/sql/: main.lua
examples/utilities/: main.lua
examples/wikipedia/: README.md  bookmarks.db  main.lua
src/: env.rs  fs.rs  fsop.rs  handler.rs  json.rs  lib.rs  main.rs  processor.rs  req.rs  router.rs  serialize.rs  sink.rs  source.rs  store.rs  task.rs  worker.rs
src/frontend/: fuse.rs  mod.rs  ninep.rs  ninep_client.rs  sshfs.rs
tests/: all_ops_e2e.rs  bundle_defaults_e2e.rs  cli_execution_e2e.rs  comprehensive_e2e.rs  convert_demo_e2e.rs  doc_demo_e2e.rs  edge_cases_e2e.rs  env_demo_e2e.rs  fs_mirror_e2e.rs  fs_ops_e2e.rs  fsop_tests.rs  handler_example_e2e.rs  http_demo_e2e.rs  modular_demo_e2e.rs  ninep_client_e2e.rs  router_tests.rs  serialize_demo_e2e.rs  simple_http_test_e2e.rs  simpler_demo_e2e.rs  sql_demo_e2e.rs  ssh_http_test.rs  store_direct.rs  test_basic_e2e.rs  tls_e2e.rs  utilities_demo_e2e.rs  wikipedia_e2e.rs
tests/common/: mod.rs
