[package]
name = "pinhead"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
matchit = "0.9"
async-trait = "0.1"
bytes = "1"
fuser = { version = "0.17", features = ["libfuse3"], optional = true }
rlua = "0.20"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
aes = "0.9.0"
ctr = "0.10.0"
sha2 = "0.11.0"
ed25519-dalek = "2.2.0"
x25519-dalek = "2.0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
ureq = "3"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

[features]
default = ["fuse"]
fuse = ["dep:fuser"]
