[package]
name = "pinhead"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "signal"] }
matchit = "0.9"
async-trait = "0.1"
bytes = "1"
fuser = { version = "0.17", features = ["libfuse3"], optional = true }
rlua = "0.20"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
ed25519-dalek = "2.2.0"
ureq = "3"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
russh-sftp = "2.1.1"
russh = { path = "vendor/russh", features = ["ring"] }

[dev-dependencies]
ssh2 = "0.9"

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[patch.crates-io]
pkcs8 = { path = "vendor/pkcs8" }
