[package]
name = "pinhead"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
matchit = "0.9"
async-trait = "0.1"
bytes = "1"
fuser = { version = "0.17", features = ["libfuse3"] }
libc = "0.2"
mlua = { version = "0.9", features = ["luajit", "vendored"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
ed25519-dalek = "2.2.0"
ureq = "3"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
russh-sftp = "2.1.1"
russh = { path = "vendor/russh", features = ["ring"] }
jaq-all = "0.1"

[dev-dependencies]
ssh2 = "0.9"

[features]
default = []

[patch.crates-io]
pkcs8 = { path = "vendor/pkcs8" }
